syntax = "proto3";

package payment.v1;

option go_package = "github.com/radiophysiker/microservices-homework/week1/shared/pkg/proto/payment/v1";

// Сервис для оплаты заказов симулирует работу платёжного шлюза
service PaymentService {
  rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}

// Запрос для оплаты заказа
message PayOrderRequest {
  string order_uuid = 1;
  string user_uuid = 2;
  PaymentMethod payment_method = 3;
}

// Ответ оплаты заказа с id возвращенной транзакции
message PayOrderResponse {
  string transaction_uuid = 1;
}

// Способы оплаты
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;
  PAYMENT_METHOD_CARD = 1;
  PAYMENT_METHOD_SBP = 2;
  PAYMENT_METHOD_CREDIT_CARD = 3;
  PAYMENT_METHOD_INVESTOR_MONEY = 4;
}
